--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,13 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/app/api/auth/[...nextauth]/page.js",
+    "src/app/api/auth/[...nextauth]/route."
+  ],
   "exclude": ["node_modules"]
 }
